-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9, 10
-
Component/s: hotspot
-
b21
-
sparc
-
solaris_11
Here, we should assume at least Solaris 11.1 (JDK9).
- relates to
-
JDK-8172232 SPARC ISA/CPU feature detection is broken/insufficient (on Linux).
-
- Resolved
-
-
JDK-8183119 Resolve 'libkstat' dependency between open and closed part of JDK.
-
- Resolved
-
-
JDK-8182279 Add HW feature detection support for SPARC Core C5 (on Solaris).
-
- Resolved
-
-
JDK-8181852 Remove option 'UseV8InstrsOnly'
-
- Resolved
-
-
JDK-8181853 Remove use of 'v9_only()'
-
- Resolved
-
-
JDK-8181868 Remove use of 'has_fast_fxtof()'
-
- Resolved
-
-
JDK-8035146 assert(is_T_family(features) == is_niagara(features), "Niagara should be T series") is incorrect
-
- Resolved
-
-
JDK-8210284 "assert((av & 0x00000001) == 0) failed: unsupported V8" on Solaris 11.4
-
- Closed
-
-
JDK-8263407 SPARC64 detection fails on Athena (SPARC64-X)
-
- Closed
-
-
JDK-8054979 remove unnecessary defines in SPARC's VM_Version::platform_features
-
- Resolved
-