8172231: SPARC ISA/CPU feature detection is broken/insufficient (on Solaris)

Update for new platforms

Reviewed-by: kvn